# pydozor_libs

./: .coveragerc  .dockerignore  .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dozor.py  dozor_offline.py  entrypoint.sh  pyproject.toml
pydozor/: __init__.py  _compat.py  dozor.py  schemas.py  types.py  wrapper.py
pydozor/_compat/: dozor.py
