[tool.poetry]
name = "pydozor"
version = "0.2.0"
description = "Python interface to Dozor."
license = "MIT"
authors = ["Jie Nan <jie.nan@maxiv.lu.se>"]
maintainers = ["Jacob Oldfield <oldfielj@ansto.gov.au>"]
readme = "README.md"
homepage = "https://github.com/JieNanMAXIV/pydozor_libs"
repository = "https://github.com/JieNanMAXIV/pydozor_libs"
documentation = "https://github.com/JieNanMAXIV/pydozor_libs"
packages = [
  { include = "pydozor" }
]


[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
priority = "primary"

[[tool.poetry.source]]
name = "asci-prod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
priority = "primary"

[[tool.poetry.source]]
name = "asci-dev"
url = "https://pypi.asci.synchrotron.org.au/asci/dev/+simple"
priority = "supplemental"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"
cffi = "^1.16.0"
h5py = "^3.10.0"
bitshuffle = "^0.5.1"
typing-extensions = ">=4.11.0"
pydantic = "2.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.0"
dectris-compression = ">=0.3.1,<0.4.0"


[tool.black]
line-length = 88
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
ignore = ["**/typing_extensions.py"]
pythonVersion = "3.11"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
